**Added a star Field using glsl shader **Vanquished an overflowing alien bug originating from the star field

--- a/style/style.scss
+++ b/style/style.scss
@@ -6,9 +6,11 @@
     text-decoration: none;
     list-style: none;
 }
-html{
+
+html {
     scroll-behavior: smooth;
 }
+
 :root {
     --bg-color: #222327;
     --text-color: #fff;
@@ -34,6 +36,7 @@ body {
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
     overflow-x: hidden;
+    position: relative;
 }
 
 /*
@@ -42,7 +45,6 @@ body {
 img,
 picture,
 video,
-canvas,
 svg {
     display: block;
     max-width: 100%;
@@ -80,15 +82,16 @@ h6 {
     isolation: isolate;
 }
 
+
 .sec1 {
     height: 100vh;
 
     background-image: url(/img/hero01.png);
     background-position: center;
     background-size: cover;
-    mask-image: linear-gradient(black 90%,transparent);
-    -webkit-mask-box-image: linear-gradient(black 90%,transparent);
-    
+    mask-image: linear-gradient(black 90%, transparent);
+    -webkit-mask-box-image: linear-gradient(black 90%, transparent);
+
 
 
     .over1 {
@@ -100,7 +103,7 @@ h6 {
         place-items: center;
         justify-content: end;
         justify-items: center;
-        
+
         .txt {
             width: 80%;
             color: white;
@@ -111,7 +114,8 @@ h6 {
             padding: 35px;
             border: 1px inset rgb(0 0 0 / 10%);
             transition: 1s;
-            &:hover{
+
+            &:hover {
                 background-color: rgb(0 0 0 / 30%);
             }
 
@@ -317,11 +321,27 @@ h6 {
     }
 }
 
-.sec2 {
+.testarea {
+    position: relative;
+    background-color: #22232738;
+    min-height: max(125rem, 250vh);
+}
 
+.sec2 {
     display: grid;
     margin-block: 5vh;
 }
+
+.glslCanvas {
+    top: 0;
+    left: 0;
+    outline: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
 
 .floatyhead {
     position: relative;
@@ -481,7 +501,12 @@ h6 {
     }
 }
 
-
+@media (max-width:450px){
+.sec2 > div{
+    max-width: 100vw;
+    margin-inline: unset;
+}
+}
 
 .moon {
     display: inline-flex;
@@ -644,7 +669,7 @@ hr {
     position: relative;
     display: flex;
     justify-content: center;
-    margin-bottom: 15vh;
+    padding-bottom: 15vh;
 
     .container {
         display: flex;
@@ -734,105 +759,8 @@ hr {
     }
 }
 
-.testarea {
 
-    perspective: 50vmin;
-    // background-image: radial-gradient(#0000, #683ab721), linear-gradient(-90deg, #20005859, #000, #9b27b023), linear-gradient(0deg, #ff99001a, #000, #8bc34a2d);
-
-    * {
-        transform-style: preserve-3d;
-    }
-
-    *:before,
-    *:after {
-        box-sizing: border-box;
-        transform-style: preserve-3d;
-        position: absolute;
-        content: "";
-    }
-
-    .stars {
-        position: relative;
-        overflow: hidden;
-    }
-
-    .stars:before,
-    .stars:after {
-        width: 100%;
-        height: -webkit-fill-available;
-        height: -moz-available;
-        content: "";
-        background: #fff0;
-        background-image: repeating-conic-gradient(#FFF8 0%, transparent .0002%, transparent .075%, transparent .65%), repeating-conic-gradient(#FFF 0%, transparent .0004%, transparent 0.05%, transparent .495%);
-        transform: translateZ(-40vmin);
-        opacity: 0;
-        animation: stars 25s ease-in-out 0s infinite;
-        // z-index: 1;
-        // left: -50vw;
-        // top: -50vh;
-    }
-
-    .stars:after {
-        animation-name: stars2;
-        animation-delay: 1s;
-    }
-
-
-    @keyframes stars {
-        0% {
-            transform: translateZ(-40vmin);
-            opacity: 0;
-        }
-
-        30%,
-        70% {
-            opacity: 1;
-        }
-
-        90% {
-            opacity: 1;
-        }
-
-        100% {
-            transform: translateZ(40vmin) rotate(15deg);
-            opacity: 0;
-        }
-    }
-
-    @keyframes stars2 {
-        0% {
-            transform: translateZ(-40vmin) rotate(180deg);
-            opacity: 0;
-        }
-
-        30%,
-        70% {
-            opacity: 1;
-        }
-
-        90% {
-            opacity: 1;
-        }
-
-        100% {
-            transform: translateZ(40vmin) rotate(195deg);
-            opacity: 0;
-        }
-    }
-
-
-
-
-    .stars+.stars::before {
-        animation-delay: 2s;
-    }
-
-    .stars+.stars::after {
-        animation-delay: 3s;
-    }
-}
-
-
+// footer
 
 .footer-distributed {
     background: hsl(216deg 10% 20%);
@@ -842,20 +770,20 @@ hr {
     text-align: left;
     padding: 24px 45px 25px;
     overflow: hidden;
-    animation: foot 10s ease-in-out infinite;
+    // animation: foot 10s ease-in-out infinite;
 }
 
-@keyframes foot {
-    0%{
-        background: hsl(216deg 10% 20%);
-    }
-    50%{
-        background: hsl(216deg 10% 20% / 0%);
-    }
-    100%{
-        background: hsl(216deg 10% 20%);
-    }
-}
+// @keyframes foot {
+//     0%{
+//         background: hsl(216deg 10% 20%);
+//     }
+//     50%{
+//         background: hsl(216deg 10% 20% / 50%);
+//     }
+//     100%{
+//         background: hsl(216deg 10% 20%);
+//     }
+// }
 
 /* Footer left */
 
@@ -870,10 +798,12 @@ hr {
     margin: 0 0 10px;
     padding: 0;
 }
-.stopper{
+
+.stopper {
     color: var(--main-color);
     font-size: 20px;
 }
+
 .footer-distributed .footer-links a {
     display: inline-block;
     line-height: 1.8;
@@ -882,7 +812,8 @@ hr {
     padding-inline: 7px;
     border: solid 1px transparent;
     transition: all 0.5s ease-in-out;
-    &:hover{
+
+    &:hover {
         color: var(--main-color);
         text-shadow: #444;
         background-color: #18191b;
@@ -994,7 +925,8 @@ hr {
     font-weight: bold;
     float: right;
     transition: 1s;
-    &:hover{
+
+    &:hover {
         background-color: var(--main-color);
     }
 }
@@ -1053,18 +985,21 @@ hr {
         float: none;
     }
 }
-*hr{
+
+*hr {
     animation: HRrot 10s ease-in-out 2s infinite !important;
 }
 
 @keyframes HRrot {
-    0%{
-        transform: rotate3d(1,1,1, 0deg);
+    0% {
+        transform: rotate3d(1, 1, 1, 0deg);
     }
-    50%{
-        transform: rotate3d(1,1,1, 360deg);
+
+    50% {
+        transform: rotate3d(1, 1, 1, 360deg);
     }
-    100%{
-        transform: rotate3d(1,1,1, 0deg);
+
+    100% {
+        transform: rotate3d(1, 1, 1, 0deg);
     }
-    }
+}
